Bug 370396 - TabBox with filter rule "All other desktops" shows desktop if there are no other windows
Summary: TabBox with filter rule "All other desktops" shows desktop if there are no ot...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-10 09:11 UTC by Roman Gilg
Modified: 2023-08-26 18:48 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Gilg 2016-10-10 09:11:40 UTC
With activated "Filter windows by: Virtual desktops: All other desktops" in KCM, if there are no windows on other Virtual Desktops, pressing Alt+Tab activates "Show Desktop" on current Virtual Desktop.

This happens also with deactivated 'Include "Show Desktop" Icon' option.
If at all, it should switch to the next Virtual Desktop and show this one, but not the current one.

Reproducible: Always

Steps to Reproduce:
1. Activate the option
2. Have multiple Virtual Desktops
3. Don't have any windows on other Virtual Desktops
4. Open window on current Vritual Desktop
5. Press Alt+Tab
-> Moves window to the side, i.e. shows current Virtual Desktop.
Comment 1 Alexander Mentyu 2018-09-19 10:26:04 UTC
Can reproduce this also on Wayland

Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
Qt Version: 5.11.1
KDE Frameworks Version: 5.51.0
Kernel Version: 4.15.0-34-generic
OS Type: 64-bit
Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
Memory: 7,7 GiB of RAM
Comment 2 Patrick Silva 2019-03-25 18:01:16 UTC
Bug persists.

Operating System: Arch Linux 
KDE Plasma Version: 5.15.3
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Comment 3 popov895 2020-11-10 23:50:40 UTC
I observe the same behavior if "Filter windows by" > "Virtual desktops" > "Current desktop" option is enabled and there are no windows on current desktop.
Comment 4 kde.org 2021-11-06 13:44:17 UTC
Can confirm the behavior in KDE 5.22.5.
Comment 5 Nate Graham 2023-07-04 13:55:46 UTC
Git commit b31baaf0cd33b0e4469e67a804d2686b13f41b7a by Nate Graham, on behalf of Daniel Lipovetsky.
Committed on 04/07/2023 at 13:38.
Pushed by ngraham into branch 'master'.

tabbox: Show window switcher only when there are two or more windows

Previously, we showed the window switcher even if there was only one
window, or no windows.

Now, we show the window switcher only if there are two or more windows.
Note that "desktop" counts as a window when the switcher's "show desktop
mode" is enabled.
Related: bug 419408

M  +7    -0    src/tabbox/tabbox.cpp

https://invent.kde.org/plasma/kwin/-/commit/b31baaf0cd33b0e4469e67a804d2686b13f41b7a
Comment 6 Bug Janitor Service 2023-08-26 18:48:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4366