feat: show window switcher only when there are two or more windows

Previously, we showed the window switcher even if there was only one
window, or no windows.

Now, we show the window switcher only if there are two or more windows.
Note that "desktop" counts as a window when the switcher's "show desktop
mode" is enabled.

BUG: 370396
BUG: 419408